# Zugzwang_RS_WASM

./: .gitignore  Cargo.toml  README.md  run.sh
scripts/: dev_front.sh  dev_ssr.sh  install.sh  start_front.sh  start_ssr.sh
web/: Cargo.toml
web/client/: package-lock.json  package.json  postcss.config.js  webpack.dev.js  webpack.prod.js
web/client/src/: App.tsx  index.tsx
web/client/src/@types/: custom.d.ts
web/client/src/components/: Page.tsx
web/client/src/pages/: 404.tsx  Game.tsx  Home.tsx
web/src/: main.rs  run.rs
zzg/: Cargo.toml
zzg/src/: lib.rs  main.rs
zzg_wasm/: Cargo.toml
zzg_wasm/src/: lib.rs
